--- a/test.html
+++ b/test.html
@@ -10,6 +10,9 @@
 		top: -9999px;
 		left: -9999px;
 	}
+	tr td {
+		background-color: #EEFFFA;
+	}
 	tr { border: 1px solid #ccc; }
 	td#descript{
 		display: None;
