--- a/test.html
+++ b/test.html
@@ -141,7 +141,7 @@
 				  { html+="<tr>\
 									<td class='centered'><a href='"+obj['item'+j].url+"'>"+obj['item'+j].titl+"</a></td>\
 									<td id='descript' class='centered'>"+obj['item'+j].descript+"</td>\
-									<td id='pic'><img height='100px' width='100px' align='center' src="+obj['item'+j].imag+"></td>\
+									<td id='pic'><img height='100px' width='100px' align='center' src="+obj['item'+j].imag+" alt='No Image'></td>\
 						   </tr>";
 				  }
 				  html+="</tr>\
